# pancho

./: .gitignore  2  CMakeLists.txt  README  cmake_install.cmake  cmakemake.bat  compile.bat  log  main.cpp  window.cpp  window.h
include/: audio.h  keytranslate.h  level.h  render.h
include/objects/: cloak.h  drawing.h  factory.h  pancho.h  stats.h  trigger_block.h
resources/: .~lock.test_level.csv#  atlasMap  atlasMap.csv  keybindings.csv  test.csv  test_level.csv  test_level1.csv  test_level1_triggers.csv  test_level2.csv
src/: atlas.cpp  atlas.h  audio.cpp  audio.h  image.cpp  image.h  keytranslate.cpp  keytranslate.h  level.cpp  level.h  main.cpp  render.cpp  render.h  stats.cpp  stats.h  supertypes.h  view.h  window.cpp  window.h  xplatform.h
src/objects/: blob_enemy.cpp  blob_enemy.h  block.cpp  block.h  cloak.cpp  crumble_block.cpp  crumble_block.h  drawing.cpp  drawing.h  enemy.cpp  enemy.h  factory.cpp  factory.h  heart.cpp  heart.h  jumpthrough_block.cpp  jumpthrough_block.h  ladder_block.cpp  ladder_block.h  pancho.cpp  pancho.h  position.cpp  position.h  spikes_block.cpp  spikes_block.h  stats.cpp  trigger_block.cpp
